# beaver-rust

./: .gitignore  README.md
src/: policy.rs
static-resin/: Cargo.toml  deserialize  livia  main_output.txt  malte
static-resin/beaver/: Cargo.toml
static-resin/beaver-derive/: Cargo.toml
static-resin/beaver-derive/src/: lib.rs
static-resin/beaver/src/: ResinBufWriter.rs  beaverio.rs  filter.rs  lib.rs  macros.rs  policy.rs
static-resin/example/: Cargo.toml
static-resin/example/src/: grade.rs  main.rs
static-resin/src/: ResinBufWriter.rs  filter.rs  main.rs  policy.rs  policyv2.rs
