[package]
name = "beaver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.4"
beaver-derive = { path = "../beaver-derive" }
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
erased-serde = "0.3"
serde_derive = "1.0.123"
typetag = "0.1"