[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beaver-derive = { path = "../beaver-derive" }
beaver = { path = "../beaver" }
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
serde_derive = "1.0.123"
typetag = "0.1"